[gd_scene load_steps=9 format=3 uid="uid://brn0n4a662fgs"]

[ext_resource type="Script" path="res://scenes/config/settings/SystemSettings.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/config/settings/system/SystemEditor.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dxv4bdgufow5k" path="res://scenes/config/settings/system/SelectExtensionsPopup.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/config/settings/AddCustomInfo.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/config/settings/AddExistingInfo.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/config/settings/system/RetroArchConfig.tscn" id="6"]
[ext_resource type="Script" path="res://source/utils/ScrollHandler.gd" id="7"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="8"]

[node name="SystemSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SystemSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../ScrollContainer/SystemEditor/Emulators")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/AddSystem")
expand_icon = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/SystemSelection"]
script = ExtResource("8")
previous = NodePath("../../../ScrollContainer/SystemEditor/Emulators")

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../ScrollContainer/SystemEditor/Emulators")
text = "Save changes"

[node name="Discard" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../ScrollContainer/SystemEditor/Emulators")
text = "Discard changes"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddSystem" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_bottom = NodePath("../../ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer/Photo")
text = "Add custom system"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="DefaultOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RestoreSystem" type="Button" parent="VBoxContainer/HBoxContainer2/DefaultOptions"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer/Photo")
text = "Restore default system"

[node name="CustomOptions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="RemoveSystem" type="Button" parent="VBoxContainer/HBoxContainer2/CustomOptions"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer/Photo")
text = "Remove custom system"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="SystemEditor" parent="VBoxContainer/ScrollContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/SystemSelection")

[node name="HBoxContainer" parent="VBoxContainer/ScrollContainer/SystemEditor" index="0"]
layout_mode = 2

[node name="VBoxContainer" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer" index="0"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="AccessibilityFocus" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer/Label" index="0"]
previous = NodePath("")

[node name="Photo" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../HBoxContainer/SystemSelection")

[node name="VBoxContainer2" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer" index="1"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer2" index="0"]
layout_mode = 2

[node name="Logo" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer/VBoxContainer2" index="1"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../../HBoxContainer/SystemSelection")

[node name="HSeparator" parent="VBoxContainer/ScrollContainer/SystemEditor" index="1"]
layout_mode = 2

[node name="HBoxContainer2" parent="VBoxContainer/ScrollContainer/SystemEditor" index="2"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer2" index="0"]
layout_mode = 2

[node name="Identifier" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer2" index="1"]
layout_mode = 2

[node name="HBoxContainer3" parent="VBoxContainer/ScrollContainer/SystemEditor" index="3"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer3" index="0"]
layout_mode = 2

[node name="Name" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer3" index="1"]
layout_mode = 2

[node name="HBoxContainer4" parent="VBoxContainer/ScrollContainer/SystemEditor" index="4"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer4" index="0"]
layout_mode = 2

[node name="Category" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer4" index="1"]
layout_mode = 2
selected = -1

[node name="HBoxContainer6" parent="VBoxContainer/ScrollContainer/SystemEditor" index="5"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer6" index="0"]
layout_mode = 2

[node name="Extensions" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer6" index="1"]
layout_mode = 2

[node name="ChangeExtensions" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer6" index="2"]
layout_mode = 2

[node name="HBoxContainer5" parent="VBoxContainer/ScrollContainer/SystemEditor" index="6"]
layout_mode = 2

[node name="Label" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer5" index="0"]
layout_mode = 2

[node name="HBoxContainer" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer5" index="1"]
layout_mode = 2

[node name="AddEmulator" parent="VBoxContainer/ScrollContainer/SystemEditor/HBoxContainer5/HBoxContainer" index="0"]
layout_mode = 2

[node name="Emulators" parent="VBoxContainer/ScrollContainer/SystemEditor" index="7"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../HBoxContainer/SystemSelection")

[node name="AccessibilityFocus" parent="VBoxContainer/ScrollContainer/SystemEditor/Emulators" index="5"]
next = NodePath("../../../../HBoxContainer/SystemSelection")

[node name="ScrollHandler" type="Control" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
script = ExtResource("7")

[node name="SelectExtensionsPopup" parent="." instance=ExtResource("3")]
unique_name_in_owner = true

[node name="AddCustomInfoPopup" parent="." instance=ExtResource("4")]
unique_name_in_owner = true
visible = false

[node name="AddExistingInfoPopup" parent="." instance=ExtResource("5")]
unique_name_in_owner = true
visible = false

[node name="RetroArchConfig" parent="." instance=ExtResource("6")]
unique_name_in_owner = true
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_SystemSettings_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/SystemSelection" to="." method="_on_SystemSelection_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="save_changes"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Discard" to="." method="discard_changes"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AddSystem" to="." method="_on_AddSystem_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DefaultOptions/RestoreSystem" to="." method="_on_RestoreSystem_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CustomOptions/RemoveSystem" to="." method="_on_RemoveSystem_pressed"]
[connection signal="change_ocurred" from="VBoxContainer/ScrollContainer/SystemEditor" to="." method="_on_SystemEditor_change_ocurred"]
[connection signal="request_add_emulator" from="VBoxContainer/ScrollContainer/SystemEditor" to="." method="_on_SystemEditor_request_add_emulator"]
[connection signal="request_extensions" from="VBoxContainer/ScrollContainer/SystemEditor" to="." method="_on_SystemEditor_request_extensions"]
[connection signal="request_retroarch_config" from="VBoxContainer/ScrollContainer/SystemEditor" to="." method="_on_SystemEditor_request_retroarch_config"]
[connection signal="extensions_picked" from="SelectExtensionsPopup" to="." method="_on_SelectExtensionsPopup_extensions_picked"]
[connection signal="identifier_picked" from="AddCustomInfoPopup" to="." method="_on_AddCustomInfoPopup_identifier_picked"]
[connection signal="identifier_picked" from="AddExistingInfoPopup" to="." method="_on_AddExistingInfoPopup_identifier_picked"]
[connection signal="cores_picked" from="RetroArchConfig" to="." method="_on_RetroArchConfig_cores_picked"]

[editable path="VBoxContainer/ScrollContainer/SystemEditor"]
